--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h2 {
 }
 #menu li{ padding: 10px;}
 #menu li a { text-decoration: none;color: white;}
-.main {
+.content {
     margin-left: 220px;
     padding: 30px;
     padding-left: 45px;
