--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,24 @@
-* { margin: 0;padding: 0;}
-.main {
-    margin: 100px auto 0px auto;
-    text-align: center;
-}
-h2 {
-    margin-bottom: 30px;
-}
+* { margin: 0;padding: 0;font-family: sans-serif;}
+.main { margin: 100px auto 0px auto;text-align: center;}
+h2 { margin-bottom: 35px;font-size: 20px;}
 #login {
     text-align: center;
-    padding: 10px;
+    padding: 30px 50px 50px 50px;
     max-width: 300px;
     margin: auto;
     padding-bottom: 30px;
+    border: 3px solid silver;
+    border-radius: 10px;
 }
-#login label {
-    margin: auto;
-    margin-bottom: 20px;
-}
+#login label { float: left;margin-bottom: 10px;font-size: 13px;}
 #login input {
     max-width: 290px;
     width: 290px;
-    padding: 5px;
+    padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
     outline: none;
-    border: 2% solid black;
+    border: 2px solid silver;
 }
 #submit {
     background-color: white;
@@ -32,10 +26,9 @@ h2 {
     height: 40px;
     outline: none;
     width: 150px;
+    border: 2px solid silver;
 }
-#login input:focus, #submit:focus {
-    box-shadow: 0 0 3pt 2pt silver;
-}
+#login input:focus, #submit:focus { box-shadow: 0 0 3pt 2pt silver;}
 #menu {
     position: fixed;
     top: 0;
