--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 * { margin: 0;padding: 0;font-family: sans-serif;}
+
+/* ============================================================================= */
+/* Login */
+
 .main { margin: 100px auto 0px auto;text-align: center;}
 h2 { margin-bottom: 35px;font-size: 20px;}
 #login {
@@ -29,6 +33,28 @@ h2 { margin-bottom: 35px;font-size: 20px;}
     border: 2px solid silver;
 }
 #login input:focus, #submit:focus { box-shadow: 0 0 3pt 2pt silver;}
+
+/* ============================================================================= */
+/* Projeto */
+
+.proj {
+    border: 1px solid silver;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: left;
+    width: 300px;
+    height: 100px;
+}
+.content {
+    margin-left: 220px;
+    padding: 30px;
+    padding-left: 45px;
+    height: 100%;
+}
+
+/* ============================================================================= */
+/* Global */
+
 #menu {
     position: fixed;
     top: 0;
@@ -37,22 +63,17 @@ h2 { margin-bottom: 35px;font-size: 20px;}
     height: 100%;
     background-color: silver;
     list-style: none;
-    padding: 10px;
-    padding-top: 100px;
+    padding: 50px 0 10px 0;
 }
-#menu li{ padding: 10px;}
-#menu li a { text-decoration: none;color: white;}
-.content {
-    margin-left: 220px;
-    padding: 30px;
-    padding-left: 45px;
-    height: 100%;
-}
-.proj {
-    border: 1px solid silver;
-    border-radius: 5px;
-    padding: 10px;
-    text-align: left;
-    width: 300px;
-    height: 100px;
+li{ padding: 20px;background-color: white;border: 0.5px solid silver;}
+a { color: black;text-decoration: none;padding: 20px 25px 20px 25px;}
+#menu li:hover { background-color: #B0E0E6;}
+.active { background-color: #87CEFA;}
+#user {
+    margin: auto;
+    background: url('../img/user.png') no-repeat;
+    background-size: 100%;
+    height: 50px;
+    width: 50px;
+    margin-bottom: 50px;
 }
